--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.10",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5"
